[package]
name = "meticulous"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["aarch64-apple-darwin", "wasm32-unknown-unknown"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
wgpu = "0.20.0"
winit = "0.30.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
web-sys = "0.3.69"

